--- a/public/views/stats.ejs
+++ b/public/views/stats.ejs
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A place for everything realm royale!">
-    <meta name="author" content="Dan Fisher">
-    <meta name="keywords" content="sports club news HTML template">
+        <meta name="author" content="Mike Hunt">
+    <meta name="keywords" content="Mike Hunt Content">
 
     <!-- Favicons
     ================================================== -->
