Updated logic to make sure mmr changes only when we can ensure a player is not being updated for a duplicate match, had issues in past looking at logs, this will resolve :)

--- a/public/views/orgTourney.ejs
+++ b/public/views/orgTourney.ejs
@@ -72,7 +72,7 @@
     <!-- Header Mobile -->
     <div class="header-mobile clearfix" id="header-mobile">
         <div class="header-mobile__logo">
-            <a href="/"><img src="assets/images/esports/logoTemp1.png" srcset="assets/images/esports/logoTemp1.png 1.0x"
+            <a href="/"><img src="/assets/images/esports/logoTemp1.png" srcset="/assets/images/esports/logoTemp1.png 1.0x"
                              alt="Realm Royale Logo"
                              class="header-mobile__logo-img"></a>
         </div>
@@ -126,8 +126,8 @@
                             <li class="active">
                                 <a href="#" style="pointer-events: none;">Organize Events</a>
                                 <ul class="main-nav__sub">
-                                    <li class=""><a href="/orgLeagueTemp">Organize League</a></li>
-                                    <li class="active"><a href="/orgTourneyTemp">Organize Tourney</a></li>
+                                    <li class=""><a href="/orgLeague">Organize League</a></li>
+                                    <li class="active"><a href="/orgTourney">Organize Tourney</a></li>
                                 </ul>
                             </li>
 
