--- a/public/views/stats.ejs
+++ b/public/views/stats.ejs
@@ -169,8 +169,8 @@ let queueValues = {
                             <li class="">
                                 <a href="#" style="pointer-events: none;">Organize Events</a>
                                 <ul class="main-nav__sub">
-                                    <li class="active"><a href="/orgLeagueTemp">Organize League</a></li>
-                                    <li class=""><a href="/orgTourneyTemp">Organize Tourney</a></li>
+                                    <li class="active"><a href="/orgLeague">Organize League</a></li>
+                                    <li class=""><a href="/orgTourney">Organize Tourney</a></li>
                                 </ul>
                             </li>
 
