--- a/public/views/match.ejs
+++ b/public/views/match.ejs
@@ -129,8 +129,8 @@
                             <li class="">
                                 <a href="#" style="pointer-events: none;">Organize Events</a>
                                 <ul class="main-nav__sub">
-                                    <li class=""><a href="/orgLeagueTemp">Organize League</a></li>
-                                    <li class=""><a href="/orgTourneyTemp">Organize Tourney</a></li>
+                                    <li class=""><a href="/orgLeague">Organize League</a></li>
+                                    <li class=""><a href="/orgTourney">Organize Tourney</a></li>
                                 </ul>
                             </li>
 
