--- a/public/views/orgTourney.ejs
+++ b/public/views/orgTourney.ejs
@@ -54,7 +54,14 @@
 
         form.addEventListener('submit', handleForm);
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PDYKQEDNX3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'G-PDYKQEDNX3');
+    </script>
 </head>
 <body data-template="template-esports">
 <% function split(string, delimiter, n) {
@@ -573,7 +580,6 @@
 <script src="/assets/js/core.js"></script>
 
 <!-- Vendor JS -->
-<script src="/assets/vendor/twitter/jquery.twitter.js"></script>
 <script src="/assets/vendor/marquee/jquery.marquee.min.js"></script>
 
 
