--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -43,6 +43,14 @@
     <!-- Custom CSS-->
     <link href="assets/css/custom.css" rel="stylesheet">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PDYKQEDNX3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-PDYKQEDNX3');
+    </script>
 </head>
 <body data-template="template-esports">
 
@@ -768,7 +776,6 @@
 <script src="/assets/js/core.js"></script>
 
 <!-- Vendor JS -->
-<script src="/assets/vendor/twitter/jquery.twitter.js"></script>
 <script src="/assets/vendor/marquee/jquery.marquee.min.js"></script>
 
 
