--- a/public/views/mmr.ejs
+++ b/public/views/mmr.ejs
@@ -54,7 +54,14 @@
 
         form.addEventListener('submit', handleForm);
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PDYKQEDNX3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'G-PDYKQEDNX3');
+    </script>
 </head>
 <body data-template="template-esports">
 
@@ -204,7 +211,7 @@
                         <div class="widget-game-result__section">
                             <header class="widget-game-result__subheader card__subheader card__subheader--sm card__subheader--nomargins">
                                 <h5 class="widget-game-result__subtitle" style="font-size: 1.25rem">
-                                    See Latest Matches
+                                    <a href='/stats/<%=playerStats['id']%>'>See Latest Matches</a>
                                 </h5>
                             </header>
                             <div class="widget-game-result__section-inner">
@@ -389,7 +396,6 @@
 <script src="/assets/js/core.js"></script>
 
 <!-- Vendor JS -->
-<script src="/assets/vendor/twitter/jquery.twitter.js"></script>
 <script src="/assets/vendor/marquee/jquery.marquee.min.js"></script>
 
 
