--- a/public/views/stats.ejs
+++ b/public/views/stats.ejs
@@ -82,6 +82,7 @@ function ordinal_suffix_of(i) {
 
  %>
 <%
+
 let queueValues = {
     474: 'Solo\'s',
     475: 'Trio\'s', // who cares about consistency right realm? should be duo kekw thanks reforged
@@ -91,6 +92,7 @@ let queueValues = {
     481: 'Squad\'s Mid LvL',
     482: 'Duo\'s',
     483: 'Duo\'s Mid LvL',
+    484: 'Duo\'s Low Lvl',
     10188: 'Solo Custom\'s',
     10189: 'Duo Custom\'s',
     10205: 'Trio Custom\'s',
@@ -115,6 +117,8 @@ let classValues = {
         'Squad\'s' :3,
         'Solo\'s Low LvL':12,
         'Squad\'s Mid LvL':14,
+         'Duo\'s Low LvL':11,
+
         'Duo\'s Mid LvL':13,
         'War\'s':15,
         'Solo Custom\'s':7,
